# MapMe_v1

./: CMakeLists.txt  README
databases/fr/: battles.xml  capitals.xml  cities.xml
src/: ConfigManager.cpp  ConfigManager.h  EventManager.cpp  EventManager.h  GfxManager.cpp  GfxManager.h  Singleton.h  SoundManager.cpp  SoundManager.h  StateManager.cpp  StateManager.h  game_world.cpp  game_world.h  locations.cpp  locations.h  main.cpp  main.h  menu.cpp  menu.h  parser.cpp  parser.h  timer.cpp  timer.h  utils.cpp  utils.h
src/sdlgfx/: SDL_framerate.c  SDL_framerate.h  SDL_rotozoom.c  SDL_rotozoom.h
src/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.h
